Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/4-layouts/2.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/2.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Crear y pasar datos a un layout de blog personalizado
+title: Crea y pasa datos a un layout de blog personalizado
 i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
@@ -15,16 +15,16 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Ahora que ya tienes un layout para tus páginas, vamos a añadir un layout para las entradas del blog.
+Ahora que ya tienes una plantilla para tus páginas, vamos a añadir una plantilla para las entradas del blog.
 
 <PreCheck>
-  - Cree un nuevo layout de entrada de blog para sus archivos Markdown
-  - Pasar valores frontmatter YAML como props al componente layout
+  - Cree una nueva plantilla de entrada de blog para tus archivos Markdown
+  - Pasar valores frontmatter YAML como props al componente plantilla
 </PreCheck>
 
-## Añade un layout a las entradas de tu blog
+## Añade una plantilla a las entradas de tu blog
 
-Al incluir la propiedad frontmatter `layout` en un archivo `.md`, todos los valores YAML de frontmatter estarán disponibles para el archivo layout.
+Al incluir la propiedad frontmatter `layout` en un archivo `.md`, todos los valores YAML de frontmatter estarán disponibles para el archivo plantilla.
 
 1. Crea un nuevo archivo en `src/layouts/MarkdownPostLayout.astro`.
 
@@ -39,7 +39,7 @@ Al incluir la propiedad frontmatter `layout` en un archivo `.md`, todos los valo
     <slot />
     ```
 
-3. Añada la siguiente propiedad frontmatter en `post-1.md`.
+3. Añade la siguiente propiedad frontmatter en `post-1.md`.
 
     ```markdown title="src/pages/posts/post-1.md" ins={2}
     ---
@@ -55,21 +55,21 @@ Al incluir la propiedad frontmatter `layout` en un archivo `.md`, todos los valo
     ---
     ```
 
-4. Compruebe de nuevo la vista previa de su navegador en `localhost:3000/posts/post-1` y observe lo que el layout ha añadido a su página. 
+4. Comprueba de nuevo la vista previa de tu navegador en `localhost:3000/posts/post-1` y observa lo que la plantilla ha añadido a su página. 
 
-5. Añade la misma propiedad layout a tus otros dos post `post-2.md` y `post-3.md`. Comprueba en tu navegador que el layout también se aplica a estos post.
+5. Añade la misma propiedad plantilla a tus otros dos post `post-2.md` y `post-3.md`. Comprueba en tu navegador que el plantilla también se aplica a estos post.
 
 :::tip
-Al utilizar layouts, ahora tiene la opción de incluir elementos, como un título de página, en el contenido Markdown o en el layout. Recuerde inspeccionar visualmente la vista previa de su página y realizar los ajustes necesarios para evitar elementos duplicados. 
+Al utilizar plantillas, ahora tienes la opción de incluir elementos, como un título de página, en el contenido Markdown o en la plantilla. Recuerda inspeccionar visualmente la vista previa de tu página y realizar los ajustes necesarios para evitar elementos duplicados. 
 :::
 
 <Box icon="puzzle-piece">
 
-## Pruébalo tú mismo - Personaliza el layout de los posts de tu blog
+## Pruébalo tú mismo - Personaliza la plantilla de los posts de tu blog
 
 **Reto**: Identifica los elementos comunes a cada post del blog, y utiliza `MarkdownPostLayout.astro` para renderizarlos, en lugar de escribirlos en tu Markdown en `post-1.md` y en cada futuro post del blog.
 
-He aquí un ejemplo de refactorización de su código para incluir la `pubDate` en el componente layout en lugar de escribirla en el cuerpo de su Markdown:
+He aquí un ejemplo de refactorización de su código para incluir la `pubDate` en el componente plantilla en lugar de escribirla en el cuerpo de su Markdown:
 
 ```markdown title="src/pages/posts/post-1.md" del={1}
 Published on: 2022-07-01
@@ -87,9 +87,9 @@ const { frontmatter } = Astro.props;
 <slot />
 ```
 
-Refactoriza todo lo que consideres útil y añade a tu layout todo lo que quieras, ¡recordando que todo lo que añadas a tu layout es una cosa menos que escribirás en todas y cada una de los posts de tu blog!
+Refactoriza todo lo que consideres útil y añade a tu plantilla todo lo que quieras, ¡recordando que todo lo que añadas a tu plantilla es una cosa menos que escribirás en todas y cada una de los posts de tu blog!
 
-Este es un ejemplo de un layout refactorizado que deja sólo el contenido individual del post del blog renderizado por el slot. Siéntete libre de usarlo o de crear el tuyo propio.
+Este es un ejemplo de un plantilla refactorizada que deja sólo el contenido individual del post del blog renderizado por el slot. Siéntete libre de usarlo o de crear el tuyo propio.
 
 ```astro title="src/layouts/MarkdownPostLayout.astro"
 ---
@@ -105,7 +105,7 @@ const { frontmatter } = Astro.props;
 </Box>
 
 :::note[evitar duplicados]
- Todo lo que se muestre en el layout **no** tiene que escribirse en el post del blog. Si observa alguna duplicación al comprobar la vista previa de su navegador, asegúrese de eliminar el contenido de su archivo Markdown.
+ Todo lo que se muestre en la plantilla **no** tiene que escribirse en el post del blog. Si observas alguna duplicación al comprobar la vista previa de tu navegador, asegúrete de eliminar el contenido de tu archivo Markdown.
  :::
 
  
@@ -166,17 +166,17 @@ const { frontmatter } = Astro.props;
 ## Checklist
 
 <Checklist>
-- [ ] Puedo añadir una propiedad layout a un post de blog Markdown en su frontmatter YAML.
-- [ ] Puedo crear un layout separado para posts en Markdown.
-- [ ] Puedo utilizar valores del frontmatter de un post en un componente layout.
+- [ ] Puedo añadir una propiedad plantilla a un post de blog Markdown en su frontmatter YAML.
+- [ ] Puedo crear una plantilla por separado para posts en Markdown.
+- [ ] Puedo utilizar valores del frontmatter de un post en un componente plantilla.
 </Checklist>
 
 </Box>
 
 ### Recursos
 
-- [Layouts de Markdown en Astro](/es/guides/markdown-content/#frontmatter-layout)
+- [Layouts de Markdown en Astro](/es/guides/markdown-content/#layout-en-el-frontmatter)
 
-- [Markdown Layout Props](/es/core-concepts/layouts/#markdown-layout-props)
+- [Markdown Layout Props](/es/core-concepts/layouts/#props-de-plantillas-markdown)
 
 - [Introduccion a YAML](https://dev.to/paulasantamaria/introduction-to-yaml-125f) <Badge>externo</Badge>
