--- a/src/content/docs/es/tutorial/4-layouts/3.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/3.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Combine layouts para obtener lo mejor de ambos mundos
+title: Combine plantillas para obtener lo mejor de ambos mundos
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -21,11 +21,11 @@ Ahora que ya tienes escrito tu primer post `.md`, vamos a hacer que se parezca a
   - Anida el layout de los posts de tu blog dentro del layout de tu página principal
 </PreCheck>
 
-## Anida tus dos layouts
+## Anida tus dos plantillas
 
-Ya tienes un `BaseLayout.astro` para definir el layout general de tus páginas. 
+Ya tienes un `BaseLayout.astro` para definir la plantilla general de tus páginas. 
 
-El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para las propiedades comunes de los posts de tu blog, como `title` y `date`, pero los posts de tu blog no tienen el mismo aspecto que el resto de páginas de tu sitio. Puedes conseguirlo **anidando layouts**.
+El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para las propiedades comunes de los posts de tu blog, como `title` y `date`, pero los posts de tu blog no tienen el mismo aspecto que el resto de páginas de tu sitio. Puedes conseguirlo **anidando plantillas**.
 
 
 1. En `src/layouts/MarkdownPostLayout.astro`, importa `BaseLayout.astro` y úsalo para envolver todo el contenido de la plantilla. No olvides pasar la propiedad `pageTitle`:
@@ -45,13 +45,13 @@ El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para
     </BaseLayout>
     ```
 
-2. Compruebe la vista previa de su navegador en `localhost:3000/posts/post-1`. Ahora debería ver el contenido renderizado por:
+2. Comprueba la vista previa de tu navegador en `localhost:3000/posts/post-1`. Ahora debería ver el contenido renderizado por:
 
-    - Tu ** layout de página principal**, incluyendo tus estilos, enlaces de navegación y pie de página social.
-    - Tu **blog post layout**, incluyendo propiedades frontmatter como la descripción, fecha, título e imagen.
+    - Tu ** plantilla de página principal**, incluyendo tus estilos, enlaces de navegación y pie de página social.
+    - Tu **plantilla de blog post**, incluyendo propiedades frontmatter como la descripción, fecha, título e imagen.
     - Tu **contenido Markdown individual para el blog post**, incluyendo sólo el texto escrito en este post
 
-3. Observe que el título de su página se muestra ahora dos veces, una por cada layout.
+3. Observa que el título de tu página se muestra ahora dos veces, una por cada plantilla.
 
     Elimina la línea que muestra el título de tu página de `MarkdownPostLayout.astro`:
 
@@ -66,7 +66,7 @@ El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para
     </BaseLayout>
     ```
 
-5. Compruebe de nuevo la vista previa de su navegador en `localhost:3000/posts/post-1` y verifique que esta línea ya no aparece y que su título sólo se muestra una vez. Realice cualquier otro ajuste necesario para asegurarse de que no tiene contenido duplicado.
+5. Comprueba de nuevo la vista previa de tu navegador en `localhost:3000/posts/post-1` y verifica que esta línea ya no aparece y que su título sólo se muestra una vez. Realice cualquier otro ajuste necesario para asegurarse de que no tiene contenido duplicado.
 
 
   Asegúrese de que:
@@ -84,7 +84,7 @@ El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para
 
 ### Pon a prueba tus conocimientos
 
-1. Esto le permite anidar un layout dentro de otro y aprovechar las ventajas de trabajar con piezas modulares.
+1. Esto le permite anidar una plantilla dentro de otra y aprovechar las ventajas de trabajar con piezas modulares.
 
     <MultipleChoice>
       <Option>
@@ -98,7 +98,7 @@ El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para
       </Option>
     </MultipleChoice>
 
-2. Los layouts múltiples son especialmente útiles para proyectos que contienen páginas Markdown, como...
+2. Las plantillas múltiples son especialmente útiles para proyectos que contienen páginas Markdown, como...
 
     <MultipleChoice>
       <Option isCorrect>
@@ -138,4 +138,4 @@ El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para
 
 ### Recursos
 
-- [Layouts anidados en Astro](/es/core-concepts/layouts/#nesting-layouts)
+- [Layouts anidados en Astro](/es/core-concepts/layouts/#plantillas-anidadas)
