--- a/src/content/docs/es/tutorial/4-layouts/index.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/index.mdx
@@ -1,12 +1,12 @@
 ---
 type: tutorial
-unitTitle: Ahorre tiempo y energía con layouts de página reutilizables
-title: 'Regístrese: Unidad 4 - Layouts'
+unitTitle: Ahorra tiempo y energía con plantiallas de página reutilizables
+title: 'Regístrate: Unidad 4 - Plantillas'
 i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
-  Utiliza los layout Astro para compartir elementos y estilos comunes en tus páginas y
+  Utiliza los plantillas Astro para compartir elementos y estilos comunes en tus páginas y
   posts
 ---
 import Badge from '~/components/Badge.astro';
@@ -15,7 +15,7 @@ import Checklist from '~/components/Checklist.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 
 
-Ahora que ya puedes construir con componentes, ¡vamos a crear algunos layouts personalizados!
+Ahora que ya puedes construir con componentes, ¡vamos a crear algunas plantillas personalizadas!
 
 ## ¿Dónde estamos ahora?
 
@@ -23,14 +23,14 @@ Ahora que ya puedes construir con componentes, ¡vamos a crear algunos layouts p
 
 ## ¿Adónde vamos?
 
-En esta unidad, crearás layouts para compartir elementos y estilos comunes en tus páginas y posts de blog.
+En esta unidad, crearás plantillas para compartir elementos y estilos comunes en tus páginas y posts de blog.
 
 Para ello:
 
-- Crear componentes de layout reutilizables
-- Pasa contenido a tus layouts con `<slot />`
-- Pasa datos de Markdown frontmatter a tus layouts
-- Varios layouts anidados
+- Crear componentes de plantillas reutilizables
+- Pasa contenido a tus plantillas con `<slot />`
+- Pasa datos de Markdown frontmatter a tus plantillas
+- Varias plantillas anidadas
 
 
 
@@ -39,6 +39,6 @@ Para ello:
 ## Checklist
 
 <Checklist>
-- [ ] ¡Estoy listo para llevar mi diseño de página al siguiente nivel con layouts!
+- [ ] ¡Estoy listo para llevar mi diseño de página al siguiente nivel con plantillas!
 </Checklist>
 </Box>
