--- a/src/content/docs/es/tutorial/4-layouts/1.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/1.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Construya su primer layout
+title: Construye tu primer plantilla
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -16,17 +16,17 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 <PreCheck>
   - Refactorización de elementos comunes en un diseño de página
-  - Utilice un elemento Astro `<slot />` para colocar el contenido de la página dentro de un diseño
+  - Utiliza un elemento Astro `<slot />` para colocar el contenido de la página dentro de un diseño
   - Pasar valores específicos de la página como props a su layout
 </PreCheck>
 
 Todavía tienes algunos componentes Astro repetidamente renderizados en cada página. Volvamos a refactorizar para crear un layout de página compartido.
 
-## Cree su primer componente de layout
+## Crea tu primer componente plantilla
 
 1. Crea un nuevo archivo en la ubicación `src/layouts/BaseLayout.astro`. (Tendrás que crear primero una nueva carpeta `layouts`).
 
-2. Copie el **contenido completo** de `index.astro` en su nuevo archivo, `BaseLayout.astro`.
+2. Copia el **contenido completo** de `index.astro` en tu nuevo archivo, `BaseLayout.astro`.
 
     ```astro title="src/layouts/BaseLayout.astro"
     ---
@@ -54,9 +54,9 @@ Todavía tienes algunos componentes Astro repetidamente renderizados en cada pá
     </html>
     ```
 
-## Utilice su layout en una página
+## Utiliza tu plantilla en una página
 
-3. Sustituya el código en `src/pages/index.astro` por el siguiente:
+3. Sustituye el código en `src/pages/index.astro` por el siguiente:
 
     ```astro title="src/pages/index.astro"
     ---
@@ -68,9 +68,9 @@ Todavía tienes algunos componentes Astro repetidamente renderizados en cada pá
     </BaseLayout>
     ```
  
-4. Compruebe de nuevo la vista previa del navegador para ver qué ha cambiado (o, alerta de spoiler: ¡no ha cambiado!).
+4. Comprueba de nuevo la vista previa del navegador para ver qué ha cambiado (o, alerta de spoiler: ¡no ha cambiado!).
     
-5. Añada un elemento `<slot />` a `src/layouts/BaseLayout.astro` justo encima del componente de pie de página y, a continuación, compruebe la vista previa del navegador de su página de inicio y observe lo que realmente ha cambiado esta vez.
+5. Añade un elemento `<slot />` a `src/layouts/BaseLayout.astro` justo encima del componente de pie de página y, a continuación, comprueba la vista previa del navegador de tu página de inicio y observa lo que realmente ha cambiado esta vez.
 
     ```astro title="src/layouts/BaseLayout.astro" ins={18}
     ---
@@ -103,7 +103,7 @@ Todavía tienes algunos componentes Astro repetidamente renderizados en cada pá
 
 ## Pasar valores específicos de la página como props
 
-1. Pase el título de la página a su componente layout desde `index.astro` utilizando un atributo component: 
+1. Pasa el título de la página a tu componente plantilla desde `index.astro` utilizando un atributo de componente: 
 
     ```astro title="src/pages/index.astro" 'pageTitle={pageTitle}'
     ---
@@ -115,7 +115,7 @@ Todavía tienes algunos componentes Astro repetidamente renderizados en cada pá
     </BaseLayout>
     ```
 
-2. Cambia el script de tu componente layout `BaseLayout.astro` para recibir un título de página a través de `Astro.props` en lugar de definirlo como una constante.
+2. Cambia el script de tu componente plantilla `BaseLayout.astro` para recibir un título de página a través de `Astro.props` en lugar de definirlo como una constante.
 
     ```astro title="src/layouts/BaseLayout.astro" del={5} ins={6}
     ---
@@ -127,12 +127,12 @@ Todavía tienes algunos componentes Astro repetidamente renderizados en cada pá
     ---
     ```
 
-3. Compruebe la vista previa de su navegador para verificar que el título de su página no ha cambiado. Tiene el mismo valor, pero ahora se muestra dinámicamente. Y ahora, cada página individual puede especificar su propio título al layout.
+3. Comprueba la vista previa de su navegador para verificar que el título de tu página no ha cambiado. Tiene el mismo valor, pero ahora se muestra dinámicamente. Y ahora, en cada página individual puedes especificar tu propio título en la plantilla.
 
 
 <Box icon="puzzle-piece">
 
-## Pruébelo usted mismo - Utilice su layout en todas partes
+## Pruébalo tu mismo - Utilice tu plantilla en todas partes
 
 **Refactoriza** tus otras páginas (`blog.astro` y `about.astro`) para que utilicen tu nuevo componente `<BaseLayout>` para renderizar los elementos comunes de la página.
 
@@ -140,12 +140,12 @@ No lo olvides:
 
 - Pasar un título de página como props a través de un atributo de componente.
 
-- Deje que el layout se encargue de la representación HTML de los elementos comunes.
+- Deja que la plantilla se encargue de la representación HTML de los elementos comunes.
 
-- Eliminar cualquier cosa de cada página que esa página ya no es responsable de la representación, ya que está siendo manejado por el layout, incluyendo: 
+- Eliminar cualquier cosa de cada página que esa página ya no es responsable de la representación, ya que está siendo manejado por la plantilla, incluyendo: 
 
   - Elementos HTML
-  - Componentes y sus importaciones 
+  - Componentes y tus importaciones 
   - Reglas CSS en una etiqueta `<style>` (por ejemplo, `<h1>` en su página Acerca de).
   - Etiquetas `<script>`.
 </Box>
@@ -161,7 +161,7 @@ No lo olvides:
     <MultipleChoice>
       <Option>página</Option>
       <Option>componente UI</Option>
-      <Option>layout</Option>
+      <Option>plantilla</Option>
       <Option>una imagen</Option>
       <Option isCorrect>todo lo anterior, ¡porque los componentes Astro son muy funcionales! 🏗️</Option>
     </MultipleChoice>
@@ -176,7 +176,7 @@ No lo olvides:
         utilizar un elemento HTML estándar en la página que haga referencia a una variable definida en el script frontmatter de su componente (por ejemplo, `<h1>{pageTitle}</h1>`)
       </Option>
       <Option>
-        utilizar un componente layout en la página, pasando el título como atributo del componente (por ejemplo, `<BaseLayout title="Home Page" />` o `<BaseLayout title={pageTitle} />`)
+        utilizar un componente plantilla en la página, pasando el título como atributo del componente (por ejemplo, `<BaseLayout title="Home Page" />` o `<BaseLayout title={pageTitle} />`)
       </Option>
       <Option isCorrect>
         todo lo anterior, porque Astro te permite utilizar HTML plano o sobrecargarlo con algunos scripts y componentes. 💪
@@ -207,8 +207,8 @@ No lo olvides:
 ## Checklist
 
 <Checklist>
-- [ ] Puedo crear un componente de layout Astro con `<slot />`.
-- [ ] Puedo enviar propiedades específicas de la página a un layout.
+- [ ] Puedo crear un componente plantilla de Astro con `<slot />`.
+- [ ] Puedo enviar propiedades específicas de la página a una plantilla.
 </Checklist>
 </Box>
 
