fix: add updated translation

--- a/src/content/docs/de/guides/environment-variables.mdx
+++ b/src/content/docs/de/guides/environment-variables.mdx
@@ -28,7 +28,8 @@ Astro enthält ein paar Umgebungsvariablen, die sofort einsatzbereit sind:
 - `import.meta.env.PROD`: `wahr`, wenn deine Website im Produktionsmodus läuft; andernfalls `falsch`.
 - `import.meta.env.DEV`: `true`, wenn deine Website im Entwicklungsmodus läuft; sonst `false`. Immer das Gegenteil von `import.meta.env.PROD`.
 - `import.meta.env.BASE_URL`: Die Basis-URL, von der aus deine Seite geladen wird. Sie wird durch die [Konfigurationsoption `base`](/de/reference/configuration-reference/#base) bestimmt.
-- `import.meta.env.SITE`: Diese wird auf [die Option `site`](/de/reference/configuration-reference/#site) gesetzt, die in der `astro.config` deines Projekts angegeben ist.
+{/* TODO: update anchor link (#buildassetsprefix) when the linked file has been updated */}
+- `import.meta.env.ASSETS_PREFIX`: Das Präfix für die von Astro erzeugten Asset-Links, wenn die [Konfigurationsoption `build.assetsPrefix`](/de/reference/configuration-reference/) gesetzt ist. Damit können Asset-Links erstellt werden, die nicht von Astro verarbeitet werden.
 
 ## Umgebungsvariablen setzen
 
