--- a/src/content/docs/zh-cn/reference/configuration-reference.mdx
+++ b/src/content/docs/zh-cn/reference/configuration-reference.mdx
@@ -328,7 +328,7 @@ export default defineConfig({
 
 例如，如果设置为 `https://cdn.example.com`，则资源将从 `https://cdn.example.com/_astro/...` 获取（而不管 `base` 选项如何设置）。
 
-您需要将 `./dist/_astro/` 中的文件上传到 `https://cdn.example.com/_astro/` 以提供资源。该过程取决于第三方域是如何托管的。要重命名 `_astro` 路径，请在 `build.assets` 中指定一个新目录。
+你需要将 `./dist/_astro/` 中的文件上传到 `https://cdn.example.com/_astro/` 以提供资源。该过程取决于第三方域是如何托管的。要重命名 `_astro` 路径，请在 `build.assets` 中指定一个新目录。
 
 ```js
 {
@@ -346,7 +346,7 @@ export default defineConfig({
 **默认值**：`'entry.mjs'`
 </p>
 
-当构建到 SSR 时，指定服务器入口的文件名。此入口通常取决于您要部署到的主机，并将由您的适配器为您设置。
+当构建到 SSR 时，指定服务器入口的文件名。此入口通常取决于你要部署到的主机，并将由你的适配器为你设置。
 
 注意，建议该文件以 `.mjs` 结尾，这样运行时就能检测到该文件是一个 JavaScript 模块。
 
