--- a/src/content/docs/zh-cn/guides/typescript.mdx
+++ b/src/content/docs/zh-cn/guides/typescript.mdx
@@ -36,6 +36,40 @@ Astro 中包含三个可扩展的 `tsconfig.json` 模板：`base`、`strict` 和
 /// <reference types="astro/client" />
 ```
 
+如果您不使用 VSCode，您可以安装 [Astro TypeScript plugin](https://www.npmjs.com/package/@astrojs/ts-plugin) 插件来支持从 .ts 文件导入 .astro 文件 (这对于别名导出非常有用)。
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm install @astrojs/ts-plugin
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm install @astrojs/ts-plugin
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add @astrojs/ts-plugin
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+然后，将下面内容添加到你的 `tsconfig.json`:
+
+```json title="tsconfig.json"
+  "compilerOptions": {
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
+      },
+    ],
+  }
+```
+
+要检查插件是否正常工作，创建一个 `.ts` 文件，并在里面导入一个 Astro 组件。你的编辑器应该没有警告消息。
+
 ### UI 框架
 
 如果你的项目使用了 [UI 框架](/zh-cn/core-concepts/framework-components/)，则可能需要根据框架的不同进行额外的设置。请参阅你使用的框架的文档中关于 TypeScript 的相关文档以获取更多信息。（[Vue](https://vuejs.org/guide/typescript/overview.html#using-vue-with-typescript)、[React](https://react-typescript-cheatsheet.netlify.app/docs/basic/setup)、[Preact](https://preactjs.com/guide/v10/typescript)、[Solid](https://www.solidjs.com/guides/typescript)）
@@ -51,15 +85,34 @@ import type { SomeType } from './script';
 
 通过这种方式，你可以避免让 Astro 的打包程序将导入的类型误以为是 JavaScript，从而错误地被打包。
 
-在你的 `.tsconfig` 文件中，你可以指示 TypeScript 来帮助解决这个问题。通过将[设置项 `importsNotUsedAsValues`](https://www.typescriptlang.org/tsconfig#importsNotUsedAsValues) 设置为 `error`。然后，TypeScript 会检查你的导入并告诉你什么时候应该使用 `import type`。此设置默认包含在我们的 `strict` 和 `strictest` 模板中。
+在你的 `.tsconfig` 文件中，你可以指示 TypeScript 来帮助解决这个问题。
 
-```json title="tsconfig.json" ins={3}
-{
-  "compilerOptions": {
-    "importsNotUsedAsValues": "error",
-  }
-}
-```
+<Tabs client:visible sharedStore="typescript-version">
+	<Fragment slot="tab.4.9">TypeScript ≤4.9</Fragment>
+	<Fragment slot="tab.5.0">TypeScript ≥5.0</Fragment>
+
+	<Fragment slot="panel.4.9">
+		通过将[设置项 `importsNotUsedAsValues`](https://www.typescriptlang.org/tsconfig#importsNotUsedAsValues) 设置为 `error`。TypeScript 会检查你的导入并告诉你什么时候应该使用 `import type`。此设置默认包含在我们的 `strict` 和 `strictest` 模板中。
+
+    ```json title="tsconfig.json" ins={3}
+    {
+      "compilerOptions": {
+        "importsNotUsedAsValues": "error",
+      }
+    }
+    ```
+	</Fragment>
+	<Fragment slot="panel.5.0">
+		通过将 [设置项 `verbatimModuleSyntax`](https://www.typescriptlang.org/tsconfig#verbatimModuleSyntax) 设置为 `true`。 TypeScript 会检查你的导入并告诉你什么时候应该使用 `import type`。
+    ```json title="tsconfig.json" ins={3}
+    {
+      "compilerOptions": {
+        "verbatimModuleSyntax": true,
+      }
+    }
+    ```
+	</Fragment>
+</Tabs>
 
 ## 导入别名
 
