i18n(zh-cn): update typescript.mdx

--- a/src/content/docs/zh-cn/guides/typescript.mdx
+++ b/src/content/docs/zh-cn/guides/typescript.mdx
@@ -36,7 +36,7 @@ Astro 中包含三个可扩展的 `tsconfig.json` 模板：`base`、`strict` 和
 /// <reference types="astro/client" />
 ```
 
-如果您不使用 VSCode，您可以安装 [Astro TypeScript plugin](https://www.npmjs.com/package/@astrojs/ts-plugin) 插件来支持从 .ts 文件导入 .astro 文件 (这对于别名导出非常有用)。
+如果你不使用 VSCode，那可以安装 [Astro TypeScript plugin](https://www.npmjs.com/package/@astrojs/ts-plugin) 插件来支持从 .ts 文件导入 .astro 文件 (这对于别名导出非常有用)。
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -139,7 +139,7 @@ import Layout from '@layouts/Layout.astro';
 
 ## 扩展 `window` 和 `globalThis`
 
-您可能需要在全局对象中添加一项属性。您可以在 `env.d.ts` 文件中添加全局声明来实现这一点：
+你可能需要在全局对象中添加一项属性。可以在 `env.d.ts` 文件中添加全局声明来实现这一点：
 
 ```ts title="env.d.ts"
 declare global {
@@ -154,7 +154,7 @@ export {};
 
 注意， `window` 只能在客户端代码中访问。 `globalThis` 在服务器端和客户端上都可用，但服务器端值不会共享给客户端。
 
-如果您只想为 `window` 对象中的一个属性提供类型注释，可以提供一个 `window` 接口来实现：
+如果你只想为 `window` 对象中的一个属性提供类型注释，可以提供一个 `window` 接口来实现：
 
 ```ts title="env.d.ts"
 interface Window {
@@ -166,14 +166,13 @@ interface Window {
 
 Astro 支持通过 TypeScript 来定义你的组件参数。为了启动它，你需要将一个名为 `Props` 的 TypeScript 接口添加到你的的组件。你可以（可选的）使用 `export` 语句将其导出，但这不是强制的。[Astro VSCode 扩展](/zh-cn/editor-setup/)会自动寻找 `Props` 接口，并且当你在其他模板内使用该组件时，给你提供适当的 TS 支持。
 
-```astro
+```astro title="src/components/HelloProps.astro" ins={2-5}
 ---
-// Example: HelloWorld.astro
 interface Props {
   name: string;
   greeting?: string;
 }
-const { greeting = 'Hello', name } = Astro.props
+const { greeting = 'Hello', name } = Astro.props;
 ---
 <h2>{greeting}, {name}!</h2>
 ```
