--- a/src/content/docs/en/recipes/add-yaml-support.mdx
+++ b/src/content/docs/en/recipes/add-yaml-support.mdx
@@ -36,7 +36,7 @@ Astro builds on top of Vite, and supports both Vite and Rollup plugins. This rec
     ```
 
     :::note
-    While you can now import YAML data in your Astro project, your editor will not provide types for the imported data. To add types, create a `*.d.ts` file in the `src` directory of your project and add the following:
+    While you can now import YAML data in your Astro project, your editor will not provide types for the imported data. To add types, create or find an existing `*.d.ts` file in the `src` directory of your project and add the following:
     ```ts
     // Specify the file extension you want to import
     declare module "*.yml" {
