--- a/src/content/docs/en/recipes/add-yaml-support.mdx
+++ b/src/content/docs/en/recipes/add-yaml-support.mdx
@@ -37,10 +37,10 @@ Astro builds on top of Vite, and supports both Vite and Rollup plugins. This rec
 
     :::note
     While you can now import YAML data in your Astro project, your editor will not provide types for the imported data. To add types, create or find an existing `*.d.ts` file in the `src` directory of your project and add the following:
-    ```ts
+    ```ts title="src/files.d.ts"
     // Specify the file extension you want to import
     declare module "*.yml" {
-      const value: any; // Add better type definitions here if desired
+      const value: any; // Add type definitions here if desired
       export default value;
     }
     ```
