--- a/src/content/docs/es/tutorial/5-astro-api/2.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/2.mdx
@@ -322,6 +322,6 @@ Elija el término que corresponda a la descripción.
 
 ### Recursos
 
-- [Enrutamiento dinámico de páginas en Astro](/es/core-concepts/routing/#dynamic-routes)
+- [Enrutamiento dinámico de páginas en Astro](/es/core-concepts/routing/#rutas-dinámicas)
 
-- [`getStaticPaths()` API documentacion](/en/reference/api-reference/#getstaticpaths)
+- [`getStaticPaths()` API documentacion](/es/reference/api-reference/#getstaticpaths)
