--- a/src/content/docs/es/tutorial/5-astro-api/4.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/4.mdx
@@ -137,4 +137,4 @@ Las personas pueden suscribirse a tu feed en un lector de feeds y recibir una no
 
 ### Recursos
 
-- [Generación de elementos RSS en Astro](/en/guides/rss/#using-glob-imports)
+- [Generación de elementos RSS en Astro](/es/guides/rss/#using-glob-imports)
