--- a/src/content/docs/es/tutorial/5-astro-api/3.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/3.mdx
@@ -432,4 +432,4 @@ Haga coincidir cada ruta de archivo con una segunda ruta de archivo que creará 
 
 ### Recursos
 
-- [Enrutamiento estático en Astro](/es/core-concepts/routing/#static-routes)
+- [Enrutamiento estático en Astro](/es/core-concepts/routing/#rutas-estáticas)
