--- a/src/content/docs/es/tutorial/6-islands/1.mdx
+++ b/src/content/docs/es/tutorial/6-islands/1.mdx
@@ -205,6 +205,6 @@ Para cada uno de los siguientes componentes, identifique lo que se enviará al n
 
 - [Guía de integraciones Astro](/es/guides/integrations-guide/)
 
-- [Uso de componentes de UI Framework en Astro](/es/core-concepts/framework-components/#using-framework-components)
+- [Uso de componentes de UI Framework en Astro](/es/core-concepts/framework-components/#usando-componente-de-framework)
 
-- [Referencia de las directivas del cliente Astro](/es/reference/directives-reference/#client-directives)
+- [Referencia de las directivas del cliente Astro](/es/reference/directives-reference/#directivas-del-cliente)
