fix: review changes

--- a/src/content/docs/de/reference/api-reference.mdx
+++ b/src/content/docs/de/reference/api-reference.mdx
@@ -29,12 +29,12 @@ themes---
     <a href={post.url}>Read more</a>
   </article>
 ))}
-</div>themes
-`themethemess``
+</div>
+```
 
 `glob()` benötigt nur einen Parameter: einen relativen URL-Glob der lokalen Dateien, die du importieren möchtest. Die Funktion arbeitet asynchron und gibt ein Array mit den Exporten der passenden Dateien zurück.
 
-`.glob()` kann keine Variablen oder Strings annehmen, die sie interpolieren, da sie nicht statisch analysierbar sind. (Siehe [die Anleitung zur Fehlerbehebung](/de/guides/troubleshooting/#supported-values) für einen Workaround) Das liegt daran, dass `Astro.glob()` ein Wrapper von Vite's [`import.meta.glob()`](https://vitejs.dev/guide/features.html#glob-import) ist.
+`.glob()` kann keine Variablen oder Strings annehmen, die sie interpolieren, da sie nicht statisch analysierbar sind. (Siehe [die Anleitung zur Fehlerbehebung](/de/guides/troubleshooting/#unterstützte-werte) für einen Workaround) Das liegt daran, dass `Astro.glob()` ein Wrapper von Vite's [`import.meta.glob()`](https://vitejs.dev/guide/features.html#glob-import) ist.
 
 :::note
 Du kannst auch `import.meta.glob()` selbst in deinem Astro-Projekt verwenden. Du solltest dies tun, wenn:
@@ -776,7 +776,7 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[Ein Beispiel für die Verwendung findest du in der Anleitung für `Inhaltssammlungen` (/de/guides/content-collections/#querying-collections).
+[Ein Beispiel für die Verwendung findest du in der Anleitung für `Inhaltssammlungen`](/de/guides/content-collections/#querying-collections).
 
 ### `getEntryBySlug()`
 
@@ -852,7 +852,7 @@ const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 
 ## `import.meta`
 
-Alle ESM-Module enthalten die Eigenschaft `import.meta`. Astro fügt die Eigenschaft "import.meta.env" über [Vite] (https://vitejs.dev/guide/env-and-mode.html) hinzu.
+Alle ESM-Module enthalten die Eigenschaft `import.meta`. Astro fügt die Eigenschaft "import.meta.env" über [Vite](https://vitejs.dev/guide/env-and-mode.html) hinzu.
 
 **`import.meta.env.SSR`** kann verwendet werden, um zu wissen, wann auf dem Server gerendert wird. Manchmal willst du vielleicht eine andere Logik, zum Beispiel eine Komponente, die nur auf dem Client gerendert werden soll:
 
@@ -870,7 +870,7 @@ Astro enthält mehrere integrierte Komponenten, die du in deinen Projekten verwe
 
 ### `<Markdown />`
 
-Die Markdown-Komponente ist nicht mehr in Astro integriert. Wie du Markdown in deine Astro-Dateien importierst (/de/guides/markdown-content/#importing-markdown), findest du auf unserer Markdown-Seite.
+Die Markdown-Komponente ist nicht mehr in Astro integriert. Wie du [Markdown in deine Astro-Dateien importierst](/de/guides/markdown-content/#importieren-von-markdown), findest du auf unserer Markdown-Seite.
 
 ### `<Code />`
 
