Corrected the header structure

--- a/src/content/docs/en/guides/deploy/kinsta.mdx
+++ b/src/content/docs/en/guides/deploy/kinsta.mdx
@@ -7,12 +7,13 @@ i18nReady: true
 
 You can use [Kinsta Application Hosting](https://kinsta.com/application-hosting/) to host an Astro site on their cloud hosting.
 
-## Static hosting
+## Configuring your Astro project
+
+### Static hosting
 :::tip[Looking for an example?]
 Check out [the official Kinsta Application Hosting Starter project for Astro](https://github.com/kinsta/hello-world-astro)!
 :::
 
-### Configuring your Astro project
 To host your project on **Kinsta Application Hosting**, you need to:
 - Include a `name` field in your `package.json`. (This can be anything, and will not affect your deployment.)
 - Include a `build` script in your `package.json`. (Your Astro project should already include this.)
@@ -36,12 +37,11 @@ Here are the necessary lines in your `package.json` file:
 }
 ```
 
-## SSR
+### SSR
 :::tip[Looking for an example?]
 Check out [the official Kinsta Application Hosting Starter project for Astro SSR](https://github.com/kinsta/hello-world-astro-ssr)!
 :::
 
-### Configuring your Astro project
 To host your project on **Kinsta Application Hosting**, you need to:
 - Include a `name` field in your `package.json`. (This can be anything, and will not affect your deployment.)
 - Include a `build` script in your `package.json`. (Your Astro project should already include this.)
