feat(assets): Update text to mention we support images in MDX and Markdoc too

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -10,7 +10,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 The new assets experience currently features:
 
 - A new built-in `<Image />` component
-- Relative images with automatic optimization in Markdown
+- Relative images with automatic optimization in Markdown, [MDX](/en/guides/integrations-guide/mdx/) and [Markdoc](/en/guides/integrations-guide/markdoc/)
 - Integration with content collections
 - Improved error messages and types
 
@@ -77,11 +77,11 @@ import rocket from '../assets/images/rocket.svg'
 <img src={rocket.src} width={rocket.width} height={rocket.height} alt="A rocketship in space." />
 ```
 
-### Update your Markdown files
+### Update your Markdown, MDX and Markdoc files
 
-Relative images can now be referenced in Markdown files. These will automatically be optimized and hashed by Astro's build process.
+Relative images can now be referenced in Markdown, MDX and Markdoc files. These will automatically be optimized and hashed by Astro's build process.
 
-This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory or move them near your Markdown files. (See the URL path of these built images in the example below.)
+This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory or move them near your Markdown, MDX or Markdoc files. (See the URL path of these built images in the example below.)
 
 Your existing images in `public/` and remote images are still valid but are not automatically optimized by Astro's build process.
 
