--- a/src/content/docs/en/reference/errors/get-static-paths-required.mdx
+++ b/src/content/docs/en/reference/errors/get-static-paths-required.mdx
@@ -19,6 +19,8 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 In [Static Mode](/en/core-concepts/routing/#static-ssg-mode), all routes must be determined at build time. As such, dynamic routes must `export` a `getStaticPaths` function returning the different paths to generate.
 
 **See Also:**
--  [Dynamic Routes](/en/core-concepts/routing/#dynamic-routes)- [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)- [Server-side Rendering](/en/guides/server-side-rendering/)
+-  [Dynamic Routes](/en/core-concepts/routing/#dynamic-routes)
+-  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)
+-  [Server-side Rendering](/en/guides/server-side-rendering/)
 
 
