--- a/src/content/docs/en/reference/errors/invalid-content-entry-frontmatter-error.mdx
+++ b/src/content/docs/en/reference/errors/invalid-content-entry-frontmatter-error.mdx
@@ -13,10 +13,16 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error message:**<br/>**blog** → **post.md** frontmatter does not match collection schema.<br/>"title" is required.<br/>"date" must be a valid date. (E09001)
+> **Example error message:**<br/>
+**blog** → **post.md** frontmatter does not match collection schema.<br/>
+"title" is required.<br/>
+"date" must be a valid date. (E09001)
 
 ## What went wrong?
-A Markdown or MDX entry in `src/content/` does not match its collection schema.Make sure that all required fields are present, and that all fields are of the correct type.You can check against the collection schema in your `src/content/config.*` file.See the [Content collections documentation](/en/guides/content-collections/) for more information.
+A Markdown or MDX entry in `src/content/` does not match its collection schema.
+Make sure that all required fields are present, and that all fields are of the correct type.
+You can check against the collection schema in your `src/content/config.*` file.
+See the [Content collections documentation](/en/guides/content-collections/) for more information.
 
 
 
