--- a/src/content/docs/en/reference/errors/invalid-get-static-path-param.mdx
+++ b/src/content/docs/en/reference/errors/invalid-get-static-path-param.mdx
@@ -16,9 +16,21 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **InvalidGetStaticPathParam**: Invalid params given to `getStaticPaths` path. Expected an `object`, got `PARAM_TYPE` (E03010)
 
 ## What went wrong?
-The `params` property in `getStaticPaths`'s return value (an array of objects) should also be an object.```astro title="pages/blog/[id].astro"---export async function getStaticPaths() {	return [		{ params: { slug: "blog" } },		{ params: { slug: "about" } }	];}---```
+The `params` property in `getStaticPaths`'s return value (an array of objects) should also be an object.
+
+```astro title="pages/blog/[id].astro"
+---
+export async function getStaticPaths() {
+	return [
+		{ params: { slug: "blog" } },
+		{ params: { slug: "about" } }
+	];
+}
+---
+```
 
 **See Also:**
--  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)- [`params`](/en/reference/api-reference/#params)
+-  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)
+-  [`params`](/en/reference/api-reference/#params)
 
 
