--- a/src/content/docs/en/reference/errors/invalid-get-static-paths-return.mdx
+++ b/src/content/docs/en/reference/errors/invalid-get-static-paths-return.mdx
@@ -16,9 +16,19 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **InvalidGetStaticPathsReturn**: Invalid type returned by `getStaticPaths`. Expected an `array`, got `RETURN_TYPE` (E03011)
 
 ## What went wrong?
-`getStaticPaths`'s return value must be an array of objects.```ts title="pages/blog/[id].astro"export async function getStaticPaths() {	return [ // <-- Array		{ params: { slug: "blog" } },		{ params: { slug: "about" } }	];}```
+`getStaticPaths`'s return value must be an array of objects.
+
+```ts title="pages/blog/[id].astro"
+export async function getStaticPaths() {
+	return [ // <-- Array
+		{ params: { slug: "blog" } },
+		{ params: { slug: "about" } }
+	];
+}
+```
 
 **See Also:**
--  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)- [`params`](/en/reference/api-reference/#params)
+-  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)
+-  [`params`](/en/reference/api-reference/#params)
 
 
