--- a/src/content/docs/en/reference/errors/client-address-not-available.mdx
+++ b/src/content/docs/en/reference/errors/client-address-not-available.mdx
@@ -19,6 +19,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 The adapter you're using unfortunately does not support `Astro.clientAddress`.
 
 **See Also:**
--  [Official integrations](/en/guides/integrations-guide/#official-integrations)- [Astro.clientAddress](/en/reference/api-reference/#astroclientaddress)
+-  [Official integrations](/en/guides/integrations-guide/#official-integrations)
+-  [Astro.clientAddress](/en/reference/api-reference/#astroclientaddress)
 
 
