--- a/src/content/docs/en/reference/errors/get-static-paths-invalid-route-param.mdx
+++ b/src/content/docs/en/reference/errors/get-static-paths-invalid-route-param.mdx
@@ -16,9 +16,36 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **GetStaticPathsInvalidRouteParam**: Invalid getStaticPaths route parameter for `KEY`. Expected undefined, a string or a number, received `VALUE_TYPE` (`VALUE`) (E03014)
 
 ## What went wrong?
-Since `params` are encoded into the URL, only certain types are supported as values.```astro title="/route/[id].astro"---export async function getStaticPaths() {	return [		{ params: { id: '1' } } // Works		{ params: { id: 2 } } // Works		{ params: { id: false } } // Does not work	];}---```In routes using [rest parameters](/en/core-concepts/routing/#rest-parameters), `undefined` can be used to represent a path with no parameters passed in the URL:```astro title="/route/[...id].astro"---export async function getStaticPaths() {	return [		{ params: { id: 1 } } // /route/1		{ params: { id: 2 } } // /route/2		{ params: { id: undefined } } // /route/	];}---```
+Since `params` are encoded into the URL, only certain types are supported as values.
+
+```astro title="/route/[id].astro"
+---
+export async function getStaticPaths() {
+	return [
+		{ params: { id: '1' } } // Works
+		{ params: { id: 2 } } // Works
+		{ params: { id: false } } // Does not work
+	];
+}
+---
+```
+
+In routes using [rest parameters](/en/core-concepts/routing/#rest-parameters), `undefined` can be used to represent a path with no parameters passed in the URL:
+
+```astro title="/route/[...id].astro"
+---
+export async function getStaticPaths() {
+	return [
+		{ params: { id: 1 } } // /route/1
+		{ params: { id: 2 } } // /route/2
+		{ params: { id: undefined } } // /route/
+	];
+}
+---
+```
 
 **See Also:**
--  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)- [`params`](/en/reference/api-reference/#params)
+-  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)
+-  [`params`](/en/reference/api-reference/#params)
 
 
