--- a/src/content/docs/en/reference/errors/invalid-component-args.mdx
+++ b/src/content/docs/en/reference/errors/invalid-component-args.mdx
@@ -13,7 +13,8 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>InvalidComponentArgs: Invalid arguments passed to `<MyAstroComponent>` component. (E03020)
+> **Example error messages:**<br/>
+InvalidComponentArgs: Invalid arguments passed to `<MyAstroComponent>` component. (E03020)
 
 ## What went wrong?
 Astro components cannot be rendered manually via a function call, such as `Component()` or `{items.map(Component)}`. Prefer the component syntax `<Component />` or `{items.map(item => <Component {...item} />)}`.
