--- a/src/content/docs/en/reference/errors/missing-image-dimension.mdx
+++ b/src/content/docs/en/reference/errors/missing-image-dimension.mdx
@@ -16,9 +16,12 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > Missing width and height attributes for `IMAGE_URL`. When using remote images, both dimensions are always required in order to avoid cumulative layout shift (CLS). (E03024)
 
 ## What went wrong?
-For remote images, `width` and `height` cannot be inferred from the original file. As such, in order to avoid CLS, those two properties are always required.If your image is inside your `src` folder, you probably meant to import it instead. See [the Imports guide for more information](/en/guides/imports/#other-assets).
+For remote images, `width` and `height` cannot be inferred from the original file. As such, in order to avoid CLS, those two properties are always required.
+
+If your image is inside your `src` folder, you probably meant to import it instead. See [the Imports guide for more information](/en/guides/imports/#other-assets).
 
 **See Also:**
--  [Assets (Experimental)](/en/guides/assets/)- [Image component#width-and-height](/en/guides/assets/#width-and-height)
+-  [Assets (Experimental)](/en/guides/assets/)
+-  [Image component#width-and-height](/en/guides/assets/#width-and-height)
 
 
