--- a/src/content/docs/en/reference/errors/no-adapter-installed.mdx
+++ b/src/content/docs/en/reference/errors/no-adapter-installed.mdx
@@ -19,6 +19,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 To use server-side rendering, an adapter needs to be installed so Astro knows how to generate the proper output for your targeted deployment platform.
 
 **See Also:**
--  [Server-side Rendering](/en/guides/server-side-rendering/)- [Adding an Adapter](/en/guides/server-side-rendering/#adding-an-adapter)
+-  [Server-side Rendering](/en/guides/server-side-rendering/)
+-  [Adding an Adapter](/en/guides/server-side-rendering/#adding-an-adapter)
 
 
