--- a/src/content/docs/en/reference/errors/unknown-clierror.mdx
+++ b/src/content/docs/en/reference/errors/unknown-clierror.mdx
@@ -14,7 +14,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 
 
 ## What went wrong?
-Astro encountered an unknown error while starting one of its CLI commands. The error message should contain more information.If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
+Astro encountered an unknown error while starting one of its CLI commands. The error message should contain more information.
+
+If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
 
 
 
