--- a/src/content/docs/en/reference/errors/unknown-compiler-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-compiler-error.mdx
@@ -16,7 +16,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > Unknown compiler error. (E01000)
 
 ## What went wrong?
-Astro encountered an unknown error while compiling your files. In most cases, this is not your fault, but an issue in our compiler.If there isn't one already, please [create an issue](https://astro.build/issues/compiler).
+Astro encountered an unknown error while compiling your files. In most cases, this is not your fault, but an issue in our compiler.
+
+If there isn't one already, please [create an issue](https://astro.build/issues/compiler).
 
 **See Also:**
 -  [withastro/compiler issues list](https://astro.build/issues/compiler)
