--- a/src/content/docs/en/reference/errors/unknown-content-collection-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-content-collection-error.mdx
@@ -14,7 +14,10 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 
 
 ## What went wrong?
-Astro encountered an unknown error loading your content collections.This can be caused by certain errors inside your `src/content/config.ts` file or some internal errors.If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
+Astro encountered an unknown error loading your content collections.
+This can be caused by certain errors inside your `src/content/config.ts` file or some internal errors.
+
+If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
 
 
 
