--- a/src/content/docs/en/reference/errors/unsupported-image-format.mdx
+++ b/src/content/docs/en/reference/errors/unsupported-image-format.mdx
@@ -16,7 +16,16 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **UnsupportedImageFormat**: Received unsupported format `FORMAT` from `IMAGE_PATH`. Currently only SUPPORTED_FORMATS.JOIN(', ') are supported for optimization. (E03025)
 
 ## What went wrong?
-The built-in image services do not currently support optimizing all image formats.For unsupported formats such as SVGs and GIFs, you may be able to use an `img` tag directly:```astro---import rocket from '../assets/images/rocket.svg'---<img src={rocket.src} width={rocket.width} height={rocket.height} alt="A rocketship in space." />```
+The built-in image services do not currently support optimizing all image formats.
+
+For unsupported formats such as SVGs and GIFs, you may be able to use an `img` tag directly:
+```astro
+---
+import rocket from '../assets/images/rocket.svg'
+---
+
+<img src={rocket.src} width={rocket.width} height={rocket.height} alt="A rocketship in space." />
+```
 
 
 
