--- a/src/content/docs/zh-cn/reference/errors/get-static-paths-required.mdx
+++ b/src/content/docs/zh-cn/reference/errors/get-static-paths-required.mdx
@@ -13,12 +13,12 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **GetStaticPathsRequired**: 对于动态路由来说，使用 `getStaticPaths()` 函数是必要的。请你确保从动态路由中 `export` 了一个 `getStaticPaths` 函数。(E03015)
+> **GetStaticPathsRequired**： 对于动态路由来说，使用 `getStaticPaths()` 函数是必要的。请你确保从动态路由中 `export` 了一个 `getStaticPaths` 函数。(E03015)
 
 ## 哪里出了问题?
 在[静态模式](/zh-cn/core-concepts/routing/#static-ssg-mode)下，所有路由都必须在构建时确定。因此，动态路由必须`export`一个 `getStaticPaths` 函数，来返回将要生成的不同路径。
 
-**See Also:**
+**请参阅：**
 -  [Dynamic Routes](/zh-cn/core-concepts/routing/#dynamic-routes)
 -  [`getStaticPaths()`](/zh-cn/reference/api-reference/#getstaticpaths)
 -  [Server-side Rendering](/zh-cn/guides/server-side-rendering/)
