--- a/src/content/docs/zh-cn/reference/errors/get-static-paths-required.mdx
+++ b/src/content/docs/zh-cn/reference/errors/get-static-paths-required.mdx
@@ -21,6 +21,6 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 **请参阅：**
 -  [Dynamic Routes](/zh-cn/core-concepts/routing/#dynamic-routes)
 -  [`getStaticPaths()`](/zh-cn/reference/api-reference/#getstaticpaths)
--  [Server-side Rendering](/zh-cn/guides/server-side-rendering/)
+-  [服务端渲染](/zh-cn/guides/server-side-rendering/)
 
 
