--- a/src/content/docs/zh-cn/reference/errors/get-static-paths-required.mdx
+++ b/src/content/docs/zh-cn/reference/errors/get-static-paths-required.mdx
@@ -19,7 +19,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 在[静态模式](/zh-cn/core-concepts/routing/#static-ssg-mode)下，所有路由都必须在构建时确定。因此，动态路由必须`export`一个 `getStaticPaths` 函数，来返回将要生成的不同路径。
 
 **请参阅：**
--  [Dynamic Routes](/zh-cn/core-concepts/routing/#dynamic-routes)
+-  [动态路由](/zh-cn/core-concepts/routing/#动态路由)
 -  [`getStaticPaths()`](/zh-cn/reference/api-reference/#getstaticpaths)
 -  [服务端渲染](/zh-cn/guides/server-side-rendering/)
 
