--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -16,7 +16,7 @@ In this section, we'll walk through how to add Front Matter CMS to your Astro pr
 ### Prerequisites 
 
 - Visual Studio Code
-- Project with content, great start is the [Astro Blog template](https://github.com/withastro/astro/tree/main/examples/blog)
+- Project with content, a great start is the [Astro Blog template](https://github.com/withastro/astro/tree/main/examples/blog)
 
 ### Install the Front Matter CMS extension
 
