--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -30,7 +30,7 @@ Once Front Matter CMS is installed, you will get a new icon in the Activity Bar 
 - The welcome screen will open and you can start initializing the project;
 - Click on the first step to **Initialize project**;
 - As Astro is one of the supported frameworks, you can select it from the list;
-- Register your content folders, in this case the `src/content/blog` folder;
+- Register your content folders, in this case, the `src/content/blog` folder;
 - Click on **Show the dashboard** to open the content dashboard.
 
 ### Project configuration
