--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -94,7 +94,7 @@ Content-types is the way Front Matter CMS knows how to handle your content. You 
 ```
 
 :::note
-This configuration makes sure that the content-type matches the blog content its fields.
+This configuration makes sure that the content-type matches the blog content in its fields.
 :::
 
 ### Preview your articles in the editor
