--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -107,7 +107,7 @@ From the **Front Matter CMS** panel, click on the **Start server** button. This 
 
 Open the **Front Matter CMS Dashboard**, you can do this as follows: 
 
-- Using the keyboard binding: `alt+d` (Windows & Linux) or `option+d` (macOS);
+- Using the keyboard binding: <kbd>alt</kbd> + <kbd>d</kbd> (Windows & Linux) or <kbd>options</kbd> + <kbd>d</kbd> (macOS);
 - Open the command palette and search for `Front Matter: Open dashboard`;
 - Click on the **Front Matter** icon on the title bar of the panel or files.
 
