--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -117,7 +117,7 @@ Open the **Front Matter CMS Dashboard**, you can do this as follows:
 - Front Matter will ask you for the title of the article, fill it in and press enter;
 - Your new article will be created and opened in the editor. You can start writing your article.
 
-## Useful links
+## Official Resources
 
 - [Front Matter CMS](https://frontmatter.codes/)
 - [Front Matter CMS - Documentation](https://frontmatter.codes/docs/)
