--- a/src/content/docs/zh-cn/guides/environment-variables.mdx
+++ b/src/content/docs/zh-cn/guides/environment-variables.mdx
@@ -23,9 +23,9 @@ Astro 包括了几个开箱即用的环境变量:
 - `import.meta.env.MODE`（`development` | `production`）：站点的运行模式。在运行 `astro dev` 时为 `development`，在运行 `astro build` 时为 `production`。
 - `import.meta.env.BASE_URL`（`string`）：站点运行的基础链接。它由 [`base` 配置项](/zh-cn/reference/configuration-reference/#base) 决定。
 - `import.meta.env.PROD`（`boolean`）：你的站点是否运行在生产环境。
-- `import.meta.env.DEV`（`boolean`）：你的站点是否运行在开发环境（总是和 `import.meta.env.PROD` 相反）。
+- `import.meta.env.DEV`（`boolean`）: 你的站点是否运行在开发环境（总是和 `import.meta.env.PROD` 相反）。
 - `import.meta.env.SITE`（`string`）：特指项目中 `astro.config` 中的 [`site` 项](/zh-cn/reference/configuration-reference/#site)。
-- `import.meta.env.ASSETS_PREFIX`（`string`）：如果设置了 [`build.assetsPrefix` 配置项](/zh-cn/reference/configuration-reference/#buildassetsprefix)，则指定 Astro 生成的资源链接的前缀。可以用于创建不由Astro处理的资源链接。
+
 ## 设置环境变量
 
 环境变量会从项目目录中的 `.env` 文件中加载。
