update environment-variables and configuring-astro

--- a/src/content/docs/zh-cn/guides/configuring-astro.mdx
+++ b/src/content/docs/zh-cn/guides/configuring-astro.mdx
@@ -128,6 +128,16 @@ export default defineConfig({
 
 这适合用于当你的脚本名称可能受到广告拦截器的影响（如 `ads.js` 或 `google-tag-manager.js`）时。
 
+## 环境变量
+Astro 在加载您的其他文件之前评估配置文件。因此，你不能使用 `import.meta.env` 访问在 `.env` 文件中设置的环境变量。
+你可以使用配置文件中的 `process.env` 来访问其他环境变量，例如[通过CLI设置](/zh-cn/guides/environment-variables/#使用cli)。
+你也可以使用`Vite`的[`loadEnv`](https://main.vitejs.dev/config/#using-environment-variables-in-config)函数手动加载 `.env` 文件。
+
+```js title="astro.config.mjs"
+import { loadEnv } from "vite";
+const { SECRET_PASSWORD } = loadEnv(import.meta.env.MODE, process.cwd(), "");
+```
+
 ## 配置参考
 
 📚 阅读 Astro [API 的配置参考](/zh-cn/reference/configuration-reference/)以概览所有支持的配置选项。
