--- a/src/content/docs/zh-cn/guides/environment-variables.mdx
+++ b/src/content/docs/zh-cn/guides/environment-variables.mdx
@@ -2,6 +2,7 @@
 title: 使用环境变量
 description: 学习如何在 Astro 项目中使用环境变量。
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Astro 使用 Vite 的环境变量，你可以随意[使用它们的任一方式](https://vitejs.dev/guide/env-and-mode.html)获取并设置环境变量。
 
@@ -14,7 +15,11 @@ SECRET_PASSWORD=password123
 PUBLIC_ANYBODY=there
 ```
 
-在这个示例中，`PUBLIC_ANYBODY`（通过 `import.meta.env.PUBLIC_ANYBODY` 访问) ，而 `SECRET_PASSWORD`（通过 `import.meta.env.SECRET_PASSWORD` 访问）将只对服务端可见。
+在这个示例中，`PUBLIC_ANYBODY`（通过 `import.meta.env.PUBLIC_ANYBODY` 访问） ，而 `SECRET_PASSWORD`（通过 `import.meta.env.SECRET_PASSWORD` 访问）将只对服务端可见。
+
+:::caution
+`.env` 文件不会加载到[配置文件](/en/guides/configuring-astro/#environment-variables)中。
+:::
 
 ## 默认环境变量
 
@@ -26,7 +31,10 @@ Astro 包括了几个开箱即用的环境变量:
 - `import.meta.env.DEV`（`boolean`）：你的站点是否运行在开发环境（总是和 `import.meta.env.PROD` 相反）。
 - `import.meta.env.SITE`（`string`）：特指项目中 `astro.config` 中的 [`site` 项](/zh-cn/reference/configuration-reference/#site)。
 - `import.meta.env.ASSETS_PREFIX`（`string`）：如果设置了 [`build.assetsPrefix` 配置项](/zh-cn/reference/configuration-reference/#buildassetsprefix)，则指定 Astro 生成的资源链接的前缀。可以用于创建不由Astro处理的资源链接。
+
 ## 设置环境变量
+
+### `.env` 文件
 
 环境变量会从项目目录中的 `.env` 文件中加载。
 
@@ -34,21 +42,37 @@ Astro 包括了几个开箱即用的环境变量:
 
 只要在项目目录下创建 `.env` 文件，并在其中添加一些变量。
 
-```bash
+``` ini title=".env"
 # .env
 # 这只有在服务器上运行时才会有效!
 DB_PASSWORD="foobar"
 # 这在什么地方都有效！
 PUBLIC_POKEAPI="https://pokeapi.co/api/v2"
 ```
+更多关于`.env` 文件的信息，[请参阅 Vite 文档](https://vitejs.dev/guide/env-and-mode.html#env-files)。
 
-```ini
-.env                # 加载所有变量
-.env.local          # 加载所有变量，被 git 忽略
-.env.[mode]         # 只在特定模式下加载
-.env.[mode].local   # 只在特定模式下加载，被 git 忽略
-```
-
+### 使用CLI
+你也还可以在运行项目时添加环境变量：
+<PackageManagerTabs>
+ <Fragment slot="yarn">
+    ```shell
+    POKEAPI=https://pokeapi.co/api/v2 yarn run dev
+    ```
+ </Fragment>
+ <Fragment slot="npm">
+    ```shell
+    POKEAPI=https://pokeapi.co/api/v2 npm run dev
+    ```
+ </Fragment>
+ <Fragment slot="pnpm">
+    ```shell
+    POKEAPI=https://pokeapi.co/api/v2 pnpm run dev
+    ```
+ </Fragment>
+</PackageManagerTabs>
+:::caution
+以这种方式设置的变量将在你的项目中随处可用，包括在客户端上。
+:::
 ## 获取环境变量
 
 在 Vite 中，你可以使用 `import.meta.env`，而不是使用 `process.env`，它使用了 ES2020 中添加的 `import.meta` 功能。
